# examples/CMakeLists.txt

add_executable(example1 example1.cpp)
linkum(example1)

add_executable(example2 example2.cpp)
linkum(example2)

add_executable(example3 example3.cpp)
linkum(example3)

add_executable(example4 example4.cpp)
linkum(example4)

add_executable(example12 example12.cpp)
linkum(example12)

add_executable(example15 example15.cpp)
linkum(example15)

add_executable(navfilterex navfilterex.cpp)
linkum(navfilterex)

add_executable(CommandOption1 CommandOption1.cpp)
linkum(CommandOption1)

add_executable(CommandOption2 CommandOption2.cpp)
linkum(CommandOption2)

add_executable(CommandOption3 CommandOption3.cpp)
linkum(CommandOption3)

add_executable(CommandOption4 CommandOption4.cpp)
linkum(CommandOption4)

add_executable(CommandOption5 CommandOption5.cpp)
linkum(CommandOption5)
